tests/libdef_scoped/common_test.js
commonValueNoOverride as empty; // error: string ~> empty
commonValueWithOverride as empty; // error: string ~> empty
fooSpecific; // error: not-bound
barSpecific; // error: not-bound
